--- a/Arcturus.Logging/Arcturus.Logging.csproj
+++ b/Arcturus.Logging/Arcturus.Logging.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1DF8ED03-2517-440D-BC09-5224DD98B203}</ProjectGuid>
+    <ProjectGuid>{5FB77E7A-266C-41ED-969F-30D94DB289C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Arcturus.ConsoleExtensions</RootNamespace>
-    <AssemblyName>Arcturus.ConsoleExtensions</AssemblyName>
+    <RootNamespace>Arcturus.Logging</RootNamespace>
+    <AssemblyName>Arcturus.Logging</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -49,21 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataTableWriters\AppConstants.cs" />
-    <Compile Include="DataTableWriters\ConsoleTableBuilder.cs" />
-    <Compile Include="DataTableWriters\ConsoleTableBuilderExtensions.cs" />
-    <Compile Include="DataTableWriters\ConsoleTableBuilderFormat.cs" />
-    <Compile Include="DataTableWriters\ConsoleTableBuilderOption.cs" />
+    <Compile Include="LoggerConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Arcturus.Logging\Arcturus.Logging.csproj">
-      <Project>{5fb77e7a-266c-41ed-969f-30d94db289c3}</Project>
-      <Name>Arcturus.Logging</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
