--- a/Arcturus.Logging/Arcturus.Logging.csproj
+++ b/Arcturus.Logging/Arcturus.Logging.csproj
@@ -24,11 +24,12 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Arcturus.Logging.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
@@ -56,4 +57,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if "$(ConfigurationName)" == "Release" (
+if "$(SolutionName)" == "Arcturus" (
+copy "$(TargetPath)" "C:\Development\lib\Arcturus\"
+copy "$(TargetDir)$(TargetName).xml" "C:\Development\lib\Arcturus\"
+)
+)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
