--- a/Arcturus.Logging/Arcturus.Logging.csproj
+++ b/Arcturus.Logging/Arcturus.Logging.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Log.cs" />
     <Compile Include="LoggerConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
