--- a/Arcturus.ConsoleExtensions/Arcturus.ConsoleExtensions.csproj
+++ b/Arcturus.ConsoleExtensions/Arcturus.ConsoleExtensions.csproj
@@ -70,6 +70,9 @@
       <Name>Arcturus.WinApi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DataTableWriters\SampleUsage.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if "$(ConfigurationName)" == "Release" (
