--- a/Arcturus.Time/Arcturus.Time.csproj
+++ b/Arcturus.Time/Arcturus.Time.csproj
@@ -53,6 +53,7 @@
     <Compile Include="TimeFromTimeserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weekend\WeekendDays.cs" />
+    <Compile Include="Years\YearsSinceDate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Arcturus.Logging\Arcturus.Logging.csproj">
